-The entities instakill attack can no longer be bypassed with godmode, and it now has its own death message
-It will now actually die upon touching the player, which hopefully should fix multiplayer issues of the entity not vanishing correctly
-Now drops a special new reward after you encounter it


Little Bone Changes:



Other Uncategorized Changes:

-Items that were not researchable for duplication in journey mode have all been fixed (Please report if any remaining items still do not have journey mode researchability)
-Green solution for the clentaminator will now convert spooky forest blocks back into their respective vanilla blocks
-The valley of eyes pylon can now be used regardless of how many town npcs are near it (You will still need to place it in the valley of eyes to use it)
-The valley of eyes no longer has any caves in it because they served absolutely no purpose and caused many issues with structure placement (and just make the biome look like garbage)
-The fleshy eye blocks in the valley of eyes now produce ambient particles, and produce blood particles when walked on
-New eye armor set, a prehardmode eye valley armor for the summon/sentry class
-Tortumors and Giant Tortumors can no longer move through blocks
-Buffed the exposed nerve's damage scaling when it hits multiple enemies, but it now caps at five enemies instead of ten
-Fixed grass blocks in the spooky forest and valley of eyes looking weird when sloped
-Warlock's cloak no longer gives an extra minion slot
-The catacomb barrier keys now have a cool animation when you use them
-The yellow catacomb key is now dropped by the Eater of Worlds/Brain of Cthulhu instead of Eye of Cthulhu
-Fixed a ton of spooky mod item sell prices, nerfed ones that were too expensive, and buffed ones that were too cheap
-Also added sell prices for items that were supposed to have them, such as the spooky mod bosses master relics and pets
-All natural spawns will be disabled during spooky mod's boss fights